--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "@fullcalendar/daygrid": "4.4.0",
     "@fullcalendar/interaction": "4.4.0",
     "@fullcalendar/react": "4.4.0",
+    "antd": "4.0.0",
     "aws-amplify": "2.2.5",
     "aws-amplify-react": "3.1.6",
-    "date-fns": "2.10.0",
+    "moment": "2.24.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2",
