--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "@fullcalendar/daygrid": "4.4.0",
     "@fullcalendar/interaction": "4.4.0",
     "@fullcalendar/react": "4.4.0",
-    "antd": "4.0.0",
     "aws-amplify": "2.2.5",
     "aws-amplify-react": "3.1.6",
-    "moment": "2.24.0",
+    "date-fns": "2.10.0",
     "react": "16.12.0",
+    "react-datepicker": "2.13.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0"
@@ -45,6 +45,7 @@
     "@types/jest": "24.9.1",
     "@types/node": "13.7.4",
     "@types/react": "16.9.22",
+    "@types/react-datepicker": "2.11.0",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "5.1.3",
     "aws-sdk": "2.630.0",
