--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-node_modules
-
 # testing
 coverage
 .eslintcache
-
-# production
-build
 
 # misc
 .DS_Store
@@ -24,6 +18,7 @@ amplify/backend/amplify-meta.json
 amplify/backend/awscloudformation
 build/
 dist/
+node_modules/
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
