--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "jest": "CI=true react-scripts test",
-    "lint": "tsc --noEmit && eslint --ignore-path .gitignore --quiet --fix --cache \"./**/*.{ts,tsx,js,jsx}\"",
+    "lint": "tsc --noEmit && eslint --quiet --fix --cache \"./**/*.{ts,tsx,js,jsx}\"",
     "test": "npm-run-all lint jest"
   },
   "browserslist": {
@@ -21,10 +21,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "jest": {
-    "globalSetup": "<rootDir>/jest.setup.ts",
-    "globalTeardown": "<rootDir>/jest.teardown.ts"
   },
   "dependencies": {
     "@fullcalendar/core": "4.4.0",
@@ -48,14 +44,18 @@
     "@types/react-datepicker": "2.11.0",
     "@types/react-dom": "16.9.5",
     "@types/react-router-dom": "5.1.3",
+    "@types/signal-exit": "3.0.0",
     "aws-sdk": "2.635.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "2.5.0",
+    "mock-local-storage": "1.1.11",
     "npm-run-all": "4.1.5",
     "prettier": "1.19.1",
-    "typescript": "3.8.3"
+    "signal-exit": "3.0.2",
+    "typescript": "3.8.3",
+    "waait": "1.0.5"
   }
 }
