--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "jest": "CI=true react-scripts test",
+    "jest": "CI=true react-scripts test --env=jest-environment-jsdom-sixteen",
     "lint": "tsc --noEmit && eslint --quiet --fix --cache \"./**/*.{ts,tsx,js,jsx}\"",
     "test": "npm-run-all lint jest"
   },
@@ -50,6 +50,7 @@
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "2.5.1",
+    "jest-environment-jsdom-sixteen": "1.0.3",
     "npm-run-all": "4.1.5",
     "prettier": "1.19.1",
     "typescript": "3.8.3",
