chore: switch to scoped amplify packages

--- a/package.json
+++ b/package.json
@@ -23,11 +23,19 @@
     ]
   },
   "dependencies": {
+    "@aws-amplify/analytics": "3.1.4",
+    "@aws-amplify/api": "3.1.4",
+    "@aws-amplify/auth": "3.2.1",
+    "@aws-amplify/core": "3.2.1",
+    "@aws-amplify/interactions": "3.1.4",
+    "@aws-amplify/pubsub": "3.0.5",
+    "@aws-amplify/storage": "3.1.4",
+    "@aws-amplify/ui": "2.0.2",
+    "@aws-amplify/xr": "2.1.4",
     "@fullcalendar/core": "4.4.0",
     "@fullcalendar/daygrid": "4.4.0",
     "@fullcalendar/interaction": "4.4.0",
     "@fullcalendar/react": "4.4.0",
-    "aws-amplify": "2.3.0",
     "aws-amplify-react": "3.1.9",
     "date-fns": "2.11.1",
     "react": "16.13.1",
