--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react-dom": "16.9.6",
     "@types/react-router-dom": "5.1.3",
     "aws-sdk": "2.656.0",
+    "date-fns-timezone": "0.1.4",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-prettier": "3.1.2",
