--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@fullcalendar/react": "4.4.0",
     "aws-amplify-react": "4.1.4",
     "date-fns": "2.12.0",
+    "nanoid": "3.0.2",
     "react": "16.13.1",
     "react-datepicker": "2.14.1",
     "react-dom": "16.13.1",
