--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "@fullcalendar/react": "4.4.0",
     "aws-amplify-react": "4.1.4",
     "date-fns": "2.12.0",
-    "nanoid": "3.0.2",
     "react": "16.13.1",
     "react-datepicker": "2.14.1",
     "react-dom": "16.13.1",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "uuid": "3.4.0"
   },
   "devDependencies": {
     "@testing-library/react": "10.0.2",
@@ -53,6 +53,7 @@
     "@types/react-datepicker": "2.11.0",
     "@types/react-dom": "16.9.6",
     "@types/react-router-dom": "5.1.3",
+    "@types/uuid": "7.0.2",
     "aws-sdk": "2.656.0",
     "date-fns-timezone": "0.1.4",
     "eslint": "6.8.0",
