--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "16.13.1",
     "react-datepicker": "2.14.1",
     "react-dom": "16.13.1",
+    "react-modal": "3.11.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "uuid": "3.4.0"
@@ -52,6 +53,7 @@
     "@types/react": "16.9.34",
     "@types/react-datepicker": "2.11.0",
     "@types/react-dom": "16.9.6",
+    "@types/react-modal": "3.10.5",
     "@types/react-router-dom": "5.1.4",
     "@types/uuid": "7.0.2",
     "aws-sdk": "2.656.0",
